cambios con tamaños de pantalla

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body class="container">
     <h1 class="superpuesto">Para la niña mas bonita SHAKIRA</h1>
     <div class="imagen">
-      <img src="/sources/img/beba-portada.webp" height="450px" alt="">
+      <img src="/sources/img/beba-portada.png" alt="">
     </div>
 
     <div class="music">
